Mantaflow > Liquid: Enabling Initial Velocity on Inflow / Outflow crashes Blender #73311

Closed
opened 2020-01-22 10:30:22 +01:00 by Wykrhm Reddy · 12 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-21 21:00, hash: ddda1af97a
Worked: (optional)

Short description of error
Trying to enable the Initial Velocity option on Inflow / Outflow tabs crashes Blender. Older blend files that have this option enabled also crash Blender upon load.

Exact steps for others to reproduce the error

  • Create An Object. Enable Fluid and set it to Domain.
  • Create Another Object.
  • Enable Fluid
  • Flow Type: Liquid
  • Flow Behavior: Inflow or Outflow
  • Try to enable > Initial Velocity.
  • Crash.

A Test Blend to repro the crash is available here: https://developer.blender.org/F8294458

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-21 21:00, hash: `ddda1af97a` Worked: (optional) **Short description of error** Trying to enable the Initial Velocity option on Inflow / Outflow tabs crashes Blender. Older blend files that have this option enabled also crash Blender upon load. **Exact steps for others to reproduce the error** - Create An Object. Enable Fluid and set it to Domain. - Create Another Object. - Enable Fluid - Flow Type: Liquid - Flow Behavior: Inflow or Outflow - Try to enable > Initial Velocity. - Crash. A Test Blend to repro the crash is available here: https://developer.blender.org/F8294458
Author

Added subscriber: @Wyk

Added subscriber: @Wyk
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Seems to work for me in the latest build.
Can you provide a simple .blend file, that is saved right before crash happens?

image.png

Seems to work for me in the latest build. Can you provide a simple .blend file, that is saved right before crash happens? ![image.png](https://archive.blender.org/developer/F8294452/image.png)
Author

Hey Jacques,

Here's a blend file. Trying to enable the Initial Velocity option on the Circle object crashes Blender.

Blend File: test.blend

Hey Jacques, Here's a blend file. Trying to enable the Initial Velocity option on the Circle object crashes Blender. Blend File: [test.blend](https://archive.blender.org/developer/F8294458/test.blend)
Member

I can reproduce it in that file, thanks. Apparently, you also hat to setup a domain object to make it crash (if I remove it, it does not crash). Please update the initial post to include all the steps needed to reproduce this crash. Also put a link to the file in the initial post.

I can reproduce it in that file, thanks. Apparently, you also hat to setup a domain object to make it crash (if I remove it, it does not crash). Please update the initial post to include all the steps needed to reproduce this crash. Also put a link to the file in the initial post.
Author

Ah. I updated the OP with the necessary details and link to the blend file. Thanks for looking into it.

Ah. I updated the OP with the necessary details and link to the blend file. Thanks for looking into it.
Sebastián Barschkis was assigned by Jacques Lucke 2020-01-22 11:05:53 +01:00
Member
_PyUnicode_AsUTF8String(PyObject * unicode, const char * errors) (/home/sergey/Developer/build_linux/deps/build/python/src/external_python/Objects/unicodeobject.c:5188)
pyObjectToString(PyObject * inputObject) (/home/jacques/blender-git/blender/intern/mantaflow/intern/MANTA_main.cpp:2058)
MANTA::updatePointers(MANTA * const this) (/home/jacques/blender-git/blender/intern/mantaflow/intern/MANTA_main.cpp:2577)
manta_ensure_invelocity(MANTA * fluid, FluidModifierData * mmd) (/home/jacques/blender-git/blender/intern/mantaflow/intern/manta_fluid_API.cpp:59)
update_flowsflags(FluidDomainSettings * mds, Object ** flowobjs, int numflowobj) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:2577)
BKE_fluid_modifier_processDomain(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me, const int scene_framenr) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3532)
BKE_fluid_modifier_process(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3804)
BKE_fluid_modifier_do(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3816)

Looks like callPythonFunction unexpectedly returns null.

``` _PyUnicode_AsUTF8String(PyObject * unicode, const char * errors) (/home/sergey/Developer/build_linux/deps/build/python/src/external_python/Objects/unicodeobject.c:5188) pyObjectToString(PyObject * inputObject) (/home/jacques/blender-git/blender/intern/mantaflow/intern/MANTA_main.cpp:2058) MANTA::updatePointers(MANTA * const this) (/home/jacques/blender-git/blender/intern/mantaflow/intern/MANTA_main.cpp:2577) manta_ensure_invelocity(MANTA * fluid, FluidModifierData * mmd) (/home/jacques/blender-git/blender/intern/mantaflow/intern/manta_fluid_API.cpp:59) update_flowsflags(FluidDomainSettings * mds, Object ** flowobjs, int numflowobj) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:2577) BKE_fluid_modifier_processDomain(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me, const int scene_framenr) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3532) BKE_fluid_modifier_process(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3804) BKE_fluid_modifier_do(FluidModifierData * mmd, Depsgraph * depsgraph, Scene * scene, Object * ob, Mesh * me) (/home/jacques/blender-git/blender/source/blender/blenkernel/intern/fluid.c:3816) ``` Looks like `callPythonFunction` unexpectedly returns `null`.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

This issue was referenced by 96fa613639

This issue was referenced by 96fa613639f1755cbcf25e62a36450bd95a023a9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

6c50e82efb broke it, should be fixed now!

6c50e82efb3e broke it, should be fixed now!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73311
No description provided.